err/pyanno.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyanno'...
Listing './lib/python3.5/site-packages/pyanno/measures'...
Listing './lib/python3.5/site-packages/pyanno/plots'...
Listing './lib/python3.5/site-packages/pyanno/test'...
Listing './lib/python3.5/site-packages/pyanno/ui'...
Listing './lib/python3.5/site-packages/pyanno/ui/appbase'...
Compiling './lib/python3.5/site-packages/pyanno/ui/appbase/long_running_call.py'...
***   File "./lib/python3.5/site-packages/pyanno/ui/appbase/long_running_call.py", line 103
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyanno/ui/arrayview.py'...
***   File "./lib/python3.5/site-packages/pyanno/ui/arrayview.py", line 85
    print blah.data
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyanno/util.py'...
***   File "./lib/python3.5/site-packages/pyanno/util.py", line 326
    print '---- start ----'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyanno-2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pyanno-2.0.2.egg-info/inst'...
Listing './lib/python3.5/site-packages/pyanno-2.0.2.egg-info/prefix'...
Listing './lib/python3.5/site-packages/pyanno-2.0.2.egg-info/prefix/pyAnno_data'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
